# chuck-norris

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
conan/sqlite3/: conanfile.py  conanmanifest.txt
include/: chuck-fact.h  chuck-fact.hpp  chuck-norris.hpp
python/: build_chuck_fact.py  chuck-fact.py  chuckfact.py  setup.py
src/: chuck-fact.cpp  chuck-norris.cpp  cwrapper.cpp  facts.hpp  main.c  main.cpp
